fix(returns): gate customer return flow by receipt state